Whitespace in ModelUtility